--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:sqlserver://localhost;database=odatadb;trustServerCertificate=true
+spring.datasource.username=rober
+spring.datasource.password=superhardpass12
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
